data/derived/fa15/progs/unify/prog2753.ml.out
Characters 30-42:
  let fixpoint (f,b) = wwhile ( (f,(b= f b)),b);;
                                ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
